--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,8 +8,8 @@ description: Zolan is modern minimal theme for Jekyll
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
-  image: 01.jpg
+  name: Jafe Bar
+  image: 011.jpg
   say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
