--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Jafe™
-logo: JAFE-LOGO-INDEX.png # You can add own logo.
+logo: JAFE-LOGO-INDEX2.png # You can add own logo.
 description: Just a Homelab
 
 
